[gd_scene load_steps=17 format=2]

[ext_resource path="res://Rooms/RoomBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://Rooms/Outside/242.png" type="Texture" id=2]
[ext_resource path="res://Rooms/Outside/216.png" type="Texture" id=3]
[ext_resource path="res://Rooms/ChangeCameraFollowTarget.tscn" type="PackedScene" id=4]
[ext_resource path="res://Themes And Styles/LabelFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://Objects/Graphics/Outside/235.png" type="Texture" id=6]
[ext_resource path="res://Objects/Graphics/Outside/231.png" type="Texture" id=8]
[ext_resource path="res://Objects/Graphics/Outside/232.png" type="Texture" id=9]
[ext_resource path="res://Objects/Graphics/Outside/233.png" type="Texture" id=10]
[ext_resource path="res://Objects/Graphics/Outside/234.png" type="Texture" id=11]
[ext_resource path="res://Objects/Graphics/Outside/236.png" type="Texture" id=12]
[ext_resource path="res://Objects/Graphics/Outside/238.png" type="Texture" id=13]
[ext_resource path="res://Objects/Graphics/Outside/237.png" type="Texture" id=14]
[ext_resource path="res://Rooms/Outside/Outside.gd" type="Script" id=15]

[sub_resource type="Animation" id=1]
resource_name = "Sparks"
length = 50.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4, 6, 10, 42, 44, 46, 48 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), null, ExtResource( 6 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 13 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 4, 6, 42, 44, 46, 48 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 136, 86 ), Vector2( 120, 102 ), Vector2( 108, 116 ), Vector2( 109, 128 ), Vector2( 54, 31 ), Vector2( 44, 64 ), Vector2( 39, 89 ), Vector2( 19.0842, 92.1736 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 42, 48 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -225, 0 ), Vector2( -206, 15 ), Vector2( -225, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 48 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ), Vector2( 0.890681, 1 ) ]
}

[sub_resource type="NavigationPolygon" id=2]
vertices = PoolVector2Array( -236.171, 20.3794, -236.474, 20.0009, -9.43188, -86.7929, -118.705, 26.3862, -26.9352, 233.286, -47.9589, 193.909, -30.9397, 184.565, -235.888, 24.1813, -90.0063, 29.3896, -74.6556, 36.0638, 532.105, 178.93, -67.6478, 47.7436, -52.8138, 71.6823, -34.9442, 113.151, -19.9273, 173.552, 977.866, 129.503, 953.505, 155.532, 945.83, 151.527, 1516.81, 486.238, 1579.21, 500.922, 1604.24, 511.6, 1615.59, 542.635, 1585.55, 570, 1552.51, 589.689, 1545.84, 589.689, 1499.45, 487.24, 1452.74, 493.58, 1514.47, 608.71, 1486.44, 623.06, 1406.02, 624.394, 1428.71, 492.579, 1257.18, 627.398, 1364.64, 468.886, 1405.01, 481.9, 1331.6, 462.545, 1326.59, 458.874, 1273.87, 441.855, 1062.29, 427.506, 1246.84, 428.84, 1250.17, 630.068, 1198.11, 629.4, 1112.02, 615.384, 1097.67, 614.049, 1032.93, 441.188, 1074.98, 625.062, 997.555, 450.198, 914.461, 461.878, 1053.62, 639.411, 912.459, 464.881, 962.515, 704.485, 902.781, 466.216, 898.777, 461.21, 938.821, 723.84, 924.805, 729.179, 738.929, 757.545, 831.367, 422.166, 779.976, 311.374, 597.436, 783.24, 538.036, 781.238, 442.928, 771.894, 760.287, 264.321, 391.203, 772.895, -538.846, 662.771, -551.527, 616.719, -501.804, 563.993, -516.488, 678.455, 1541.18, -289.028, 1676.99, -281.881, 1681.19, -275.154, 1657.65, -5.64633, 1605.93, 13.6943, 1427.66, 54.0573, 1392.34, 55.3186, 1325.93, 42.738, 1229.48, 20.7132, 1224.48, 16.375, 1832.97, -190.223, 1864.93, -146.917, 1862.82, -140.61, 1803.54, -32.555, 1787.56, -27.9301, 1763.18, -27.0892, -208.474, 773.229, -377.331, 810.604, -387.008, 810.604, -461.759, 529.287, -431.058, 509.264, -412.704, 490.91, -378.332, 472.223, -348.965, 462.211, -146.07, 764.219, -328.275, 452.868, -251.235, 448.25, -98.0156, 732.516, -69.3165, 711.159, -199.463, 440.854, -171.098, 438.518, 8.1042, 710.158, -87.6704, 379.785, -67.3141, 369.106, 68.7113, 715.415, -24.2655, 328.394, -10.9171, 320.051, 163.279, 727.844, 88.4724, 719.619, -1.90692, 308.705, 184.303, 735.854, 238.364, 788.58, 193.647, 749.536, 758.952, 247.302, 798.33, 184.565, 781.645, 212.263, 771.967, 227.28, 802.001, 175.221, 1733.75, -251.609, 1795.55, -218.814, 1830.45, -195.689, 1723.23, -12.3735, 1699.69, -6.90768, 1168.08, 11.3693, 1151.4, 7.69852, 809.343, 167.212, 823.358, 161.872, 829.031, 160.871, 1049.28, 36.7313, 1128.7, 8.36594, 1000.56, 96.799, 881.758, 150.86, 1031.59, 50.7471, 1113.02, 12.0367 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 4, 5, 6 ), PoolIntArray( 3, 7, 0 ), PoolIntArray( 8, 3, 2 ), PoolIntArray( 9, 8, 2, 10 ), PoolIntArray( 11, 9, 10, 12 ), PoolIntArray( 13, 12, 10 ), PoolIntArray( 14, 13, 10 ), PoolIntArray( 15, 16, 17 ), PoolIntArray( 18, 19, 20, 21, 22, 23, 24, 25 ), PoolIntArray( 26, 25, 24, 27, 28, 29 ), PoolIntArray( 30, 26, 29, 31 ), PoolIntArray( 32, 33, 30, 31, 34 ), PoolIntArray( 35, 34, 31, 36 ), PoolIntArray( 37, 38, 36, 31, 39, 40, 41 ), PoolIntArray( 37, 41, 42, 43 ), PoolIntArray( 43, 42, 44, 45 ), PoolIntArray( 46, 45, 44, 47, 48 ), PoolIntArray( 48, 47, 49, 50 ), PoolIntArray( 51, 50, 49, 52, 53, 54, 55 ), PoolIntArray( 56, 55, 54, 57, 58, 59 ), PoolIntArray( 60, 56, 59, 61, 10 ), PoolIntArray( 62, 63, 64, 65 ), PoolIntArray( 66, 67, 68, 69, 70, 71, 72, 73, 74, 75 ), PoolIntArray( 76, 77, 78, 79, 80, 81 ), PoolIntArray( 82, 83, 84, 65, 64, 85, 86 ), PoolIntArray( 82, 86, 87, 88, 89 ), PoolIntArray( 90, 82, 89, 91, 92, 93 ), PoolIntArray( 94, 93, 92, 95, 96 ), PoolIntArray( 97, 94, 96, 98, 99 ), PoolIntArray( 100, 97, 99, 101, 102 ), PoolIntArray( 103, 104, 100, 102, 105, 10 ), PoolIntArray( 4, 6, 14, 10, 105 ), PoolIntArray( 106, 103, 10 ), PoolIntArray( 107, 108, 106, 10, 61 ), PoolIntArray( 109, 60, 10 ), PoolIntArray( 110, 111, 112, 109, 10, 113 ), PoolIntArray( 114, 115, 116, 76, 81, 117, 118, 69, 68 ), PoolIntArray( 66, 75, 119, 120 ), PoolIntArray( 121, 113, 10 ), PoolIntArray( 121, 10, 66, 122 ), PoolIntArray( 123, 122, 66, 124 ), PoolIntArray( 66, 120, 125 ), PoolIntArray( 126, 15, 17, 127, 128 ), PoolIntArray( 128, 127, 123, 124 ), PoolIntArray( 66, 125, 129 ), PoolIntArray( 66, 129, 124 ) ]
outlines = [ PoolVector2Array( -236.474, 20.0009, -9.43188, -86.7929, 532.105, 178.93, 1541.18, -289.028, 1676.99, -281.881, 1681.19, -275.154, 1733.75, -251.609, 1795.55, -218.814, 1830.45, -195.689, 1832.97, -190.223, 1864.93, -146.917, 1862.82, -140.61, 1803.54, -32.555, 1787.56, -27.9301, 1763.18, -27.0892, 1723.23, -12.3735, 1699.69, -6.90768, 1657.65, -5.64633, 1605.93, 13.6943, 1427.66, 54.0573, 1392.34, 55.3186, 1325.93, 42.738, 1229.48, 20.7132, 1224.48, 16.375, 1168.08, 11.3693, 1151.4, 7.69852, 1128.7, 8.36594, 1113.02, 12.0367, 1049.28, 36.7313, 1031.59, 50.7471, 1000.56, 96.799, 977.866, 129.503, 953.505, 155.532, 945.83, 151.527, 881.758, 150.86, 829.031, 160.871, 823.358, 161.872, 809.343, 167.212, 802.001, 175.221, 798.33, 184.565, 781.645, 212.263, 771.967, 227.28, 758.952, 247.302, 760.287, 264.321, 779.976, 311.374, 831.367, 422.166, 898.777, 461.21, 902.781, 466.216, 912.459, 464.881, 914.461, 461.878, 997.555, 450.198, 1032.93, 441.188, 1062.29, 427.506, 1246.84, 428.84, 1273.87, 441.855, 1326.59, 458.874, 1331.6, 462.545, 1364.64, 468.886, 1405.01, 481.9, 1428.71, 492.579, 1452.74, 493.58, 1499.45, 487.24, 1516.81, 486.238, 1579.21, 500.922, 1604.24, 511.6, 1615.59, 542.635, 1585.55, 570, 1552.51, 589.689, 1545.84, 589.689, 1514.47, 608.71, 1486.44, 623.06, 1406.02, 624.394, 1257.18, 627.398, 1250.17, 630.068, 1198.11, 629.4, 1112.02, 615.384, 1097.67, 614.049, 1074.98, 625.062, 1053.62, 639.411, 962.515, 704.485, 938.821, 723.84, 924.805, 729.179, 738.929, 757.545, 597.436, 783.24, 538.036, 781.238, 442.928, 771.894, 391.203, 772.895, 238.364, 788.58, 193.647, 749.536, 184.303, 735.854, 163.279, 727.844, 88.4724, 719.619, 68.7113, 715.415, 8.1042, 710.158, -69.3165, 711.159, -98.0156, 732.516, -146.07, 764.219, -208.474, 773.229, -377.331, 810.604, -387.008, 810.604, -516.488, 678.455, -538.846, 662.771, -551.527, 616.719, -501.804, 563.993, -461.759, 529.287, -431.058, 509.264, -412.704, 490.91, -378.332, 472.223, -348.965, 462.211, -328.275, 452.868, -251.235, 448.25, -199.463, 440.854, -171.098, 438.518, -87.6704, 379.785, -67.3141, 369.106, -24.2655, 328.394, -10.9171, 320.051, -1.90692, 308.705, -26.9352, 233.286, -47.9589, 193.909, -30.9397, 184.565, -19.9273, 173.552, -34.9442, 113.151, -52.8138, 71.6823, -67.6478, 47.7436, -74.6556, 36.0638, -90.0063, 29.3896, -118.705, 26.3862, -235.888, 24.1813, -236.171, 20.3794 ) ]

[node name="RoomBase" instance=ExtResource( 1 )]
position = Vector2( -0.264893, 0 )
z_index = -1
script = ExtResource( 15 )
objects_data_path = "res://Objects/Data/Outside.json"
room_name = "outside"

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Collisions" index="0"]
polygon = PoolVector2Array( 1498.5, 619.75, 1479.5, 611, 1455.25, 594.25, 1441.75, 578, 1441.75, 567.25, 1448.5, 562, 1461, 564.5, 1473.5, 574.5, 1473.27, 578.57, 1496.38, 582.908, 1526, 586.5, 1508, 573.25, 1496.5, 568.5, 1484.25, 557, 1480.06, 547.767, 1507.5, 555.75, 1521.32, 557.207, 1546, 558, 1523.53, 548.545, 1518.5, 544.5, 1508.6, 540.701, 1497.75, 531.5, 1489.25, 519.5, 1486.25, 510.5, 1480.5, 504, 1470.95, 506.406, 1420.5, 496.25, 1401.02, 492.476, 1383.25, 492.25, 1334.36, 512.495, 1324.85, 520.755, 1306, 534.5, 1279.09, 550.659, 1268.75, 556.5, 1276.75, 556.5, 1337.5, 547.25, 1353, 547, 1357.05, 549.37, 1356.75, 555.5, 1341.25, 571.5, 1338, 580.25, 1324.25, 592.75, 1306.25, 595.75, 1299.5, 601.75, 1303.25, 603.25, 1326.75, 600.5, 1333, 602.25, 1363.25, 584.75, 1376.5, 571.25, 1389.5, 563.75, 1400.75, 564.25, 1411.45, 571.395, 1409.25, 575, 1420.75, 594.25, 1430.52, 600.903, 1445, 608.25, 1464.25, 623.25, 1468.25, 628 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Collisions" index="1"]
polygon = PoolVector2Array( -874.5, -413, -877, -296.5, -238, 19, -9, -88.5, 274, 52, 274, 67.5, 430.5, 142.5, 447, 137.5, 532.5, 179, 1541, -291, 1676.5, -283, 1682, -275, 1697, -269.5, 1780.5, -228, 1829, -198, 1834, -187, 1861, -153.5, 1865.5, -144.5, 1857.5, -135.5, 1845.5, -105, 1812.5, -50, 1802.5, -31.5, 1795.5, -31.5, 1789, -27.5, 1763.5, -27.5, 1724, -12.5, 1712.5, -12.5, 1702.5, -7.5, 1693, -5.5, 1676.5, -7.5, 1658, -5, 1638, 0, 1612.5, 10, 1603.5, 15.5, 1530.5, 27, 1433, 53, 1407, 58.5, 1326, 42.5, 1262, 27, 1250.5, 21.5, 1233, 19.5, 1225, 15.5, 1168.5, 11.5, 1143, 6.5, 1118.5, 10, 1054, 35.5, 1032.5, 48.5, 1009, 83, 1000.5, 98, 954, 156, 945.5, 151, 880.5, 151.5, 831.5, 159.5, 812.5, 164.5, 802, 175.5, 793.5, 194, 781, 210, 771, 228.5, 759.5, 247.5, 760.5, 261.5, 771, 284, 773.5, 300.5, 783, 322, 830.5, 419, 889.5, 459, 897.5, 458, 902, 464, 911.5, 464, 915, 459, 1004, 447.5, 1033.5, 440, 1063.5, 426, 1249, 428.5, 1279, 444, 1327, 458, 1332.5, 463.5, 1337.5, 459, 1404.5, 480.5, 1430, 492, 1475.5, 490, 1506, 485.5, 1532.5, 488, 1602.5, 510, 1616.5, 540.5, 1585, 570.5, 1550.5, 590, 1487.05, 621.211, 1255, 626.5, 1235.5, 626, 1191, 628.5, 1106.5, 614, 1091, 615.5, 945.5, 715.5, 944, 721.5, 930, 729.5, 907, 732, 589.5, 782.5, 628.5, 751, 643, 729.5, 641, 712.5, 600.68, 706.412, 577.516, 659.64, 532.971, 647.168, 467.045, 644.049, 415.23, 636.653, 363.789, 631.462, 277.897, 629.574, 249.58, 626.271, 223.624, 619.664, 204.274, 610.697, 191.532, 612.113, 175.486, 620.607, 150.945, 619.192, 97.6166, 622.495, 52.7825, 619.192, 35.3209, 628.159, 29.1857, 637.125, 218.904, 650.811, 214.657, 678.184, 234.478, 704.14, 272.233, 722.546, 317.539, 728.681, 382.667, 773.043, 237.782, 787.673, 182.093, 734.816, 51.3667, 714.051, -28.3906, 708.86, -68.5053, 708.86, -147.319, 764.076, -190.737, 768.796, -285.596, 790.033, -386.119, 811.742, -512.126, 680.543, -537.611, 664.498, -552.241, 618.248, -512.126, 573.886, -473.899, 537.547, -431.897, 509.23, -405.468, 484.69, -374.793, 469.588, -352.612, 462.037, -327.599, 452.126, -243.122, 447.406, -199.704, 438.912, -172.803, 437.024, -116.643, 403.044, -85.9671, 378.032, -65.6738, 366.233, -26.9749, 329.422, -1.96219, 308.657, -18.48, 249.665, -49.1559, 191.617, -36.4136, 187.369, -20.3677, 174.155, -31.6943, 125.073, -51.9875, 73.6323, -76.5283, 33.5176, -102.013, 26.9105, -257.28, 24.5508, -272.382, 13.6962, -283.237, 13.6962, -302.114, -4.23737, -324.295, -15.5639, -351.196, -23.5868, -388.007, -25.4746, -421.514, -30.1939, -452.19, -40.5766, -475.315, -40.1046, -484.754, -43.8801, -489.473, -55.2066, -498.44, -61.3418, -520.621, -60.8699, -541.506, -68.5495, -688.416, 65.7372, -787.642, 444.141, -428.033, 892.937, 490.521, 812.418, 984.231, 775.337, 1635, 718, 1774.92, 367.062, 1813, 268, 1853.04, 162.325, 1907.03, 54.2679, 1855, -340, 1429.21, -313.791, 520.624, -158.379, -21.1995, -132.623, -243.687, -34.0927, -875.127, -451.521, -903.732, -432.451 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Collisions" index="2"]
polygon = PoolVector2Array( -536.958, -59.7877, -537.487, -66.1445, -542.52, -68.5283, -566.093, -67.4688, -626.747, -75.1499, -738.785, -78.3283, -752.823, -69.8526, -767.126, -60.8472, -788.315, -53.9607, -796.261, -51.8418, -802.618, -44.4255, -811.888, -46.2796, -818.245, -41.7768, -828.575, -42.5714, -834.137, -38.8633, -862.477, -39.3931, -867.51, -43.6309, -893.997, -43.366, -916.775, -52.3715, -936.375, -52.9012, -950.413, -67.2039, -968.424, -93.1608, -992.262, -108.788, -1009.74, -108.258, -1023.78, -111.966, -1038.88, -113.026, -1043.12, -116.204, -1054.77, -116.204, -1058.74, -119.647, -1086.02, -119.382, -1094.5, -121.237, -1103.51, -120.707, -1108.8, -125.21, -1125.75, -124.68, -1132.64, -133.42, -1132.91, -142.691, -1139.26, -161.761, -1140.06, -175.534, -1142.71, -181.891, -1150.65, -187.718, -1156.48, -187.453, -1166.54, -193.28, -1191.44, -193.545, -1198.33, -199.107, -1204.68, -199.902, -1208.92, -205.994, -1223.75, -213.675, -1233.29, -222.15, -1240.18, -222.68, -1242.56, -226.918, -1252.36, -231.686, -1256.86, -238.837, -1256.33, -247.313, -1235.14, -265.853, -1224.55, -270.886, -1218.72, -279.361, -1209.19, -289.161, -1207.86, -294.459, -1202.57, -298.167, -1181.64, -305.583, -1167.34, -311.145, -1158.6, -312.205, -1137.67, -319.356, -1123.37, -320.151, -1120.19, -324.124, -1104.04, -321.74, -1073.31, -333.394, -1051.86, -338.162, -1030.93, -345.843, -1020.07, -352.994, -975.31, -356.967, -970.013, -359.881, -953.856, -397.492, -912.537, -408.086, -890.553, -411.529, -870.159, -413.383, -871.748, -423.978, -1128.56, -371.594, -1313.43, -289.947, -1189.04, -111.753, -939.584, 42.3727 )

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="Collisions" index="3"]
polygon = PoolVector2Array( 26.1901, 435.066, 30.1187, 425.104, 50.8843, 413.178, 83.1551, 405.741, 117.951, 405.601, 146.153, 409.67, 167.901, 417.668, 180.95, 430.015, 182.212, 437.311, 178.424, 446.711, 171.97, 452.183, 162.71, 457.515, 137.594, 465.092, 114.584, 467.898, 87.9255, 468.178, 59.5834, 462.987, 38.9581, 454.288, 27.7335, 443.905 )

[node name="Background" parent="." index="1"]
texture = ExtResource( 3 )
offset = Vector2( -1352.35, -1889 )

[node name="Objects" parent="." index="2"]
z_as_relative = false

[node name="242" type="Sprite" parent="." index="3"]
visible = false
position = Vector2( -1255.6, -412.25 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="ChangeCameraFollowTarget" parent="." index="4" instance=ExtResource( 4 )]
position_to_follow = Vector2( 1650, 320 )

[node name="CollisionPolygon2D" parent="ChangeCameraFollowTarget" index="0"]
polygon = PoolVector2Array( 1170.61, 427.477, 1152.87, 621.624, 1198.42, 627.98, 1251.85, 628.693, 1257.22, 625.067, 1413.55, 625.575, 1485.26, 623.348, 1544.95, 589.494, 1554.31, 589.494, 1586.38, 570.339, 1615.78, 542.276, 1604.2, 509.758, 1546.29, 493.276, 1513.77, 486.595, 1480.36, 489.713, 1450.52, 493.722, 1427.8, 493.276, 1398.85, 479.913, 1362.32, 467.44, 1328.91, 462.54, 1325.79, 458.531, 1301.74, 452.295, 1273.23, 442.05, 1247.16, 428.272 )

[node name="OtherObjects" type="Node2D" parent="." index="5"]

[node name="TricksterCode" type="Label" parent="OtherObjects" index="0"]
margin_left = -1177.55
margin_top = -283.0
margin_right = -851.55
margin_bottom = -248.0
rect_rotation = 14.6
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.0627451, 0.341176, 0.0588235, 1 )
text = "----- ..--- ....- ----. .---- ...-- "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Secret 1" type="Label" parent="OtherObjects" index="1"]
margin_left = 291.5
margin_top = -1847.8
margin_right = 597.5
margin_bottom = -1812.8
custom_fonts/font = ExtResource( 5 )
text = "OUTSIDE_SECRET_1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Secret 2" type="Label" parent="OtherObjects" index="2"]
margin_left = 1900.0
margin_top = -1787.9
margin_right = 2206.0
margin_bottom = -1752.9
rect_rotation = -179.2
rect_pivot_offset = Vector2( 0, 34 )
rect_clip_content = true
custom_fonts/font = ExtResource( 5 )
text = "OUTSIDE_SECRET_2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TricksterModeKeys" type="Label" parent="OtherObjects" index="3"]
margin_left = 1857.6
margin_top = -66.0185
margin_right = 1945.6
margin_bottom = -31.0185
rect_rotation = 94.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.356863, 0.227451, 0.0431373, 1 )
text = "Ctrl+G"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sparks" type="Sprite" parent="." index="6"]
position = Vector2( 136, 86 )
z_index = 1
texture = ExtResource( 8 )
centered = false
offset = Vector2( -225, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sparks" index="0"]
autoplay = "Sparks"
playback_process_mode = 2
anims/Sparks = SubResource( 1 )

[node name="NavigationPolygonInstance" parent="WalkableSpace" index="0"]
navpoly = SubResource( 2 )

[editable path="ChangeCameraFollowTarget"]
